<resources>
    <string name="app_name">AceHotel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Beranda</string>
    <string name="booking">Pesan</string>
    <string name="room">Kamar</string>
    <string name="management">Manajemen</string>
    <string name="profile">Profil</string>
    <string name="email">Email</string>
    <string name="login_account">Masuk ke\nAkun Anda</string>
    <string name="enter_email">Masukan alamat email</string>
    <string name="enter_pass">Masukan kata sandi</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="have_issues">Mengalami kendala?</string>
    <string name="contact_us">Hubungi kami</string>
    <string name="wrong_email_format">Format email salah</string>
    <string name="wrong_password_format">Password terdiri atas 8 karakter</string>
    <string name="diff_password">Pastikan password tidak sama</string>
    <string name="ace_hotel">Ace Hotel</string>
    <string name="change_stock">Atur Stok</string>
    <string name="checkout_visitor">Checkout Pengunjung</string>
    <string name="checkin_visitor">Checkin Pengunjung</string>
    <string name="username">Nama Pengguna</string>
    <string name="email_template">example@gmail.com</string>
    <string name="choose_hotel">Pilih Hotel</string>
    <string name="total_stat">Statistik Total</string>
    <string name="manage_franchise">Manajemen Cabang</string>
    <string name="customer_service">Customer Service</string>
    <string name="logout">Keluar</string>
    <string name="search">Pencarian</string>
    <string name="tab_finance">Keuangan</string>
    <string name="tab_visitor">Pengunjung</string>
    <string name="tab_inventory">Gudang</string>
    <string name="linen_total">Tipe Linen</string>
    <string name="inventory_stat">Statistik Gudang</string>
    <string name="inventory_list">Daftar Barang</string>
    <string name="stock">stok</string>
    <string name="template_number">0</string>
    <string name="total_bed">Tipe Kasur</string>
    <string name="check_internet">Pastikan kembali jaringan internet anda</string>
    <string name="today_stat">Statistik Hari Ini</string>
    <string name="income">Pendapatan</string>
    <string name="visitor_checkin">Tamu Checkin</string>
    <string name="new_book">Booking Terbaru</string>
    <string name="room_avail">Kamar Tersedia</string>
    <string name="new_visitor">Pengunjung Terkini</string>
    <string name="new_list_book">Daftar Booking Terkini</string>
    <string name="visitor_name">Nama Pengunjung</string>
    <string name="item_name">Item Name</string>
    <string name="item_change">Perubahan: 1 Jan 2024</string>
    <string name="choose_item">Pilih Barang</string>
    <string name="detail_item">Detail Barang</string>
    <string name="add_item">Tambah Barang</string>
    <string name="item_desc">Deskripsi item</string>
    <string name="save">Simpan</string>
    <string name="field_cant_empty">Data tidak boleh kosong</string>
    <string name="hotel_name">Nama Hotel</string>
    <string name="hotel_address">Alamat Hotel</string>
    <string name="update_data">Perbaharui Data</string>
    <string name="delete_data">Hapus Data</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="tab_booking_today">Hari Ini</string>
    <string name="tab_booking_next">Akan Datang</string>
    <string name="tab_booking_done">Selesai</string>
</resources>